fixed overflow x

--- a/public/css/site.scss
+++ b/public/css/site.scss
@@ -131,7 +131,7 @@ section#beta {
     background: url('/img/bg-wave-bottom.svg') no-repeat;
     background-position-y: bottom;
     background-size: cover;
-    width: 100vw;
+    width: 100%;
     height: 50vh;
 }
 
